Fix main nav scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -3875,7 +3875,6 @@ input[type=button].btn-block {
   flex-wrap: wrap;
   padding-left: 0;
   margin-bottom: 0;
-  margin-right: 15px;
   list-style: none;
 }
 
@@ -10044,6 +10043,7 @@ hr.light {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background-color: #fff;
   transition: background-color 0.5s ease;
+  margin-right: 14px;
 }
 #mainNav .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
